# qtexample

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
app/: CMakeLists.txt  Worker.cpp  Worker.h  main.cpp
app/resources/: myqt6app.desktop
c_lib/: CMakeLists.txt  mylib.h
